# geom-lib

./: CMakeLists.txt  README.md
include/: glslMath.h  manifold.h
src/: mainTests.cpp  manifold.cpp  manifoldTest.cpp
